<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signup.SignUpActivity">

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="80dp"
        android:text="이름"
        android:textStyle="bold"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/empty_name_message"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_name" />

    <TextView
        android:id="@+id/type_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_error_message"
        android:textColor="@color/red"
        app:layout_constraintStart_toStartOf="@+id/et_name"
        app:layout_constraintTop_toBottomOf="@+id/et_name"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/tv_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="아이디"
        android:textStyle="bold"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/type_name"
        app:layout_constraintTop_toBottomOf="@+id/type_name" />

    <EditText
        android:id="@+id/et_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/empty_id_message"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_id" />

    <TextView
        android:id="@+id/type_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id_error_message"
        android:textColor="@color/red"
        app:layout_constraintStart_toStartOf="@+id/et_id"
        app:layout_constraintTop_toBottomOf="@+id/et_id"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/tv_pw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textStyle="bold"
        android:text="비밀번호"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/type_id"
        app:layout_constraintTop_toBottomOf="@+id/type_id" />

    <EditText
        android:id="@+id/et_pw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/empty_password_message"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_pw" />

    <TextView
        android:id="@+id/type_pw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password_error_message"
        android:textColor="@color/red"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintStart_toStartOf="@+id/et_pw"
        app:layout_constraintTop_toBottomOf="@+id/et_pw"
        app:layout_constraintEnd_toEndOf="@+id/et_pw"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="회원가입"
        android:layout_marginBottom="180dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>